force-app/main/default/objects/Speaker__c/Speaker__c.object-meta.xml
<CustomObject>
    <label>Speaker</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Speaker ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speakers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>