force-app/main/default/objects/Speaker__c/fields/Best_Practice_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Best_Practice_Scenario__c</fullName>
    <label>Best Practice Story (Brief Description)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>