force-app/main/default/objects/Speaker__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>The event that this speaker is speaking at.</description>
    <inlineHelpText>The event that this speaker is speaking at.</inlineHelpText>
    <label>Event</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Speakers</relationshipLabel>
    <relationshipName>Speakers</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>