force-app/main/default/objects/Speaker__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Event_Session__c</referenceTo>
    <relationshipName>Speaker</relationshipName>
    <type>Lookup</type>
</CustomField>