force-app/main/default/objects/Speaker__c/fields/Session_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Session_End_Time__c</fullName>
    <formula>Session__r.Session_End_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session End Time</label>
    <type>DateTime</type>
</CustomField>