force-app/main/default/objects/Speaker__c/fields/Speaker_Rating__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Rating__c</fullName>
    <label>Speaker Rating</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>