force-app/main/default/objects/Speaker__c/fields/Topic_Expertise__c.field-meta.xml
<CustomField>
    <fullName>Topic_Expertise__c</fullName>
    <label>Topic Expertise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ROI</fullName>
            </value>
            <value>
                <fullName>PRM</fullName>
            </value>
            <value>
                <fullName>Self-service portal</fullName>
            </value>
            <value>
                <fullName>Analytics/Dashboards</fullName>
            </value>
            <value>
                <fullName>Demand generation</fullName>
            </value>
            <value>
                <fullName>Campaigns</fullName>
            </value>
            <value>
                <fullName>Leads</fullName>
            </value>
            <value>
                <fullName>Search engine marketing</fullName>
            </value>
            <value>
                <fullName>Email marketing</fullName>
            </value>
            <value>
                <fullName>Sales Operations</fullName>
            </value>
            <value>
                <fullName>Pipeline analysis</fullName>
            </value>
            <value>
                <fullName>AppExchange</fullName>
            </value>
            <value>
                <fullName>Apex Code</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>Data quality</fullName>
            </value>
            <value>
                <fullName>Implementation</fullName>
            </value>
            <value>
                <fullName>Global deployment</fullName>
            </value>
            <value>
                <fullName>SOA</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
            <value>
                <fullName>KYC</fullName>
            </value>
            <value>
                <fullName>Wallet share</fullName>
            </value>
            <value>
                <fullName>Capital Markets</fullName>
            </value>
            <value>
                <fullName>SOX</fullName>
            </value>
            <value>
                <fullName>Nonprofits</fullName>
            </value>
            <value>
                <fullName>Territory management</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>S-controls</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>